--- a/hover9.css
+++ b/hover9.css
@@ -26,6 +26,36 @@
   width: 300px;
 }
 
+.navigation-links {
+    text-transform: uppercase;
+    list-style: none;
+    float: right;
+    margin: 0;
+    margin-top: 2.5em;
+
+    transition: all 0s ease 0s;
+}
+
+.navigation-links ul {
+    padding: 0;
+}
+
+.navigation-links li {
+    display: inline-block;
+    padding: 0 1em;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.navigation-links li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.navigation-links li a:hover {
+    color: #18a99e;
+}
+
 .hovereffect .overlay {
   width: 100%;
   height: 100%;
