--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -383,6 +383,7 @@ padding: 30px 0;
 .banner-text h1 span:last-child {
     right: 0;
     left: unset;
+    width: 35px;
     background: url(https://storage.pardot.com/61432/208038/Vector_Smart_Object_copy_8.png);
     background-size: cover;
 }
