--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -384,7 +384,7 @@ padding: 30px 0;
     right: 0;
     left: unset;
     width: 35px;
-    background: url(https://storage.pardot.com/61432/208038/Vector_Smart_Object_copy_8.png);
+    background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5w/61432/207970/tag_right.png);
     background-size: cover;
 }
 .banner-text h1 {
