--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -383,8 +383,7 @@ padding: 30px 0;
 .banner-text h1 span:last-child {
     right: 0;
     left: unset;
-    width: 35px;
-    background:;
+    background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5t/61432/207972/tag_right.png) !important;
     background-size: cover;
 }
 .banner-text h1 {
