--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -381,9 +381,14 @@ padding: 30px 0;
 }
 
 .banner-text h1 span:last-child {
+    position: absolute;
+    content: '';
+    top: 15px;
     right: 0;
     left: unset;
     background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5t/61432/207972/tag_right.png);
+    bottom: 0;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .banner-text h1 {
