--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -382,7 +382,7 @@ padding: 30px 0;
 
 .banner-text h1 span:last-child {
     right: 0;
-    left: 0;
+    left: unset;
     background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5t/61432/207972/tag_right.png);
     background-size: cover;
 }
