--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -384,6 +384,7 @@ padding: 30px 0;
     right: 0;
     left: unset;
     background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5t/61432/207972/tag_right.png);
+    width: 10px;
     background-size: cover;
 }
 .banner-text h1 {
