--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -152,8 +152,8 @@ html .social-media- a {
 .container-bloc-double .col-6:last-child p {
     padding-right: 0;
     /* padding-left: 20px; */
-    text-align: justify;
-    font-size: 20px;
+    text-align: left;
+    font-size: 15px;
 }
 
 .container-bloc-double .col-6:last-child strong {
@@ -384,7 +384,6 @@ padding: 30px 0;
     right: 0;
     left: unset;
     background: url(https://dach.intersystems.de/l/61432/2019-03-13/g1zj5t/61432/207972/tag_right.png);
-    width: 10px;
     background-size: cover;
 }
 .banner-text h1 {
