--- a/styleMicroweb.css
+++ b/styleMicroweb.css
@@ -152,8 +152,8 @@ html .social-media- a {
 .container-bloc-double .col-6:last-child p {
     padding-right: 0;
     /* padding-left: 20px; */
-    text-align: left;
-    font-size: 15px;
+    text-align: justify;
+    font-size: 20px;
 }
 
 .container-bloc-double .col-6:last-child strong {
