--- a/SlideToUse/carouselengine/initcarousel-1.css
+++ b/SlideToUse/carouselengine/initcarousel-1.css
@@ -48,7 +48,7 @@
 	text-align: center;
 	padding: 4px;
 	background-color: #fff;
-	border: 1px solid #ddd;
+	border: 1px solid #fff;
 	-moz-box-shadow: 0px 0px 5px 1px rgba(96, 96, 96, 0.1);
 	-webkit-box-shadow: 0px 0px 5px 1px rgba(96, 96, 96, 0.1);
 	box-shadow: 0px 0px 5px 1px rgba(96, 96, 96, 0.1);
